[package]
name = "rpi-sauna-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
ambient-rust = { git = "https://github.com/n-miyamoto/ambient-rust" }
slack-morphism = { version = "1.9.0", features = ["hyper"] }
rsb_derive = "0.5.1"
chrono = "0.4.24"
url = "2.3.1"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
